--- a/android/app/src/main/res/drawable/splashscreen.xml
+++ b/android/app/src/main/res/drawable/splashscreen.xml
@@ -4,4 +4,9 @@
 -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:drawable="@color/splashscreen_background"/>
+  <item
+      android:width="200dp"
+      android:height="200dp"
+      android:drawable="@drawable/splashscreen_image"
+      android:gravity="center" />
 </layer-list>
